# CSC382

./: .gitignore  CMakeLists.txt  Card.cpp  CardTest.cpp  Deck.cpp  PokerHand.cpp  main.cpp  playPoker.cpp
ArraySetFun2/: ArraySet.cpp  ArraySet.hpp  CMakeLists.txt  main.cpp
FunctionFun/: CMakeLists.txt  FunctionFun.cpp
Hello/: CMakeLists.txt  main.cpp
LambdaProject/: CMakeLists.txt  LambdaFun.cpp  LambdaTests.cpp  main.cpp
LinkedPriListFun/: CMakeLists.txt  LinkedPriorityList.hpp  LinkedPriorityListTest.cpp  PriorityList.h  main.cpp
LoopFun/: CMakeLists.txt  LoopFun.cpp  LoopFun.hpp  LoopFunTest.cpp
MapFun/: CMakeLists.txt  main.cpp
PokerGame/: 52Cards.hpp  CMakeLists.txt  Deck.cpp  Player.cpp  PokerHand.cpp  main.cpp  playPoker.cpp
PortfolioFun/: CMakeLists.txt  Portfolio.cpp
ProbableTextFun/: CMakeLists.txt  main.cpp
Qt1/: CMakeLists.txt  main.cpp
SelectionFun/: CMakeLists.txt  SelectionFun.hpp  SelectionFunTest.cpp
SelectionFunFast/: CMakeLists.txt  SelectionFun1.cpp  main.cpp  sfuns.h
StackFun/: CMakeLists.txt  Stacks.hpp  StacksTest.cpp  main.cpp
ThreeMains/: CMakeLists.txt  EinsteinsNumber.cpp  RoundTo.cpp  TrainDepartureTimes.cpp
TicTacToe/: ButtonWindow.cpp  CMakeLists.txt  GUIview.cpp  main.cpp  myController.cpp  myModel.cpp  tictactoeTests.cpp
ToDoList/: CMakeLists.txt  LinkedPriorityList.hpp  ToDoListGUI.hpp  main.cpp  mymodel.cpp  mymodel.h
VectorFun1/: CMakeLists.txt  VectorFun.hpp  VectorFunTest.cpp
gameOfLife/: CMakeLists.txt  GameOfLife.cpp  GameOfLifeTest.cpp  main.cpp
midterm/: CMakeLists.txt  PiggyBank.cpp  main.cpp
testp/: CMakeLists.txt
